# JobFinder

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2a41073f7e03_update_job_model_and_add_embeddings_.py  7c26a668f8ab_initial_migration_with_job_model.py  b40f8785c5cb_update_jobs_model_for_detailed_.py
app/: main.py
app/api/routes/: jobs.py  metrics.py  recommendations.py
app/config/: __init__.py  logging_config.py  settings.py
app/core/: __init__.py  cache.py  celery_app.py  metrics.py  startup.py
app/database/: __init__.py  session.py
app/models/: job.py
app/schemas/: __init__.py  base.py  common.py  job.py  metrics.py  recommendation.py  resume.py
app/workers/: worker.py
notebooks/: create_trimmed_dataset.ipynb  explore_jobs.ipynb
samples/sample_job_descriptions/: back_end_developer.json  back_end_developer.txt  civil_engineer.json  civil_engineer.txt  data_engineer.json  data_engineer.txt  digital_marketing_specialist.json  digital_marketing_specialist.txt  front_end_engineer.json  front_end_engineer.txt  graphic_designer.json  graphic_designer.txt  human_resources_manager.json  human_resources_manager.txt  it_manager.json  it_manager.txt  network_analyst.json  network_analyst.txt  product_manager.json  product_manager.txt  social_worker.json  social_worker.txt  software_tester.json  software_tester.txt
scripts/: entrypoint.sh  generate_job_dataset.py  parse_jobs.py  parse_resume.py
(+21 files in other folders)
