[project]
name = "jobfinder"
version = "0.1.0"
description = "Job recommendation platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "pandas>=2.2.3",
    "alembic>=1.17.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
test = [
    "pytest>=8.3.3",
    "httpx>=0.27.2",
]
