[project]
name = "jobfinder"
version = "0.1.0"
description = "Job recommendation platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "pandas>=2.2.3",
    "alembic>=1.17.2",
    "pymupdf>=1.26.6",
    "langchain>=1.1.0",
    "langchain-google-genai>=3.2.0",
    "pgvector>=0.4.1",
    "scikit-learn>=1.7.2",
    "numpy>=2.3.5",
    "aiofiles>=25.1.0",
    "celery[redis]>=5.6.0",
    "redis>=6.4.0",
    "flower>=2.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
test = [
    "pytest>=8.3.3",
    "httpx>=0.27.2",
]
